--- a/index.html
+++ b/index.html
@@ -297,8 +297,7 @@
         <div class="row align-items-center">
             <div class="col-12 col-lg-5">
                 <div class="image-wrapper">
-                    <a href="https://twitter.com/joyartboston"><img src="assets/images/mbr-2.png" alt="JoyArt Boston Twitter"></a>
-                    
+                    <a class="twitter-timeline" data-lang="en" data-height="450" href="https://twitter.com/JoyArtBoston?ref_src=twsrc%5Etfw"><img src="assets/images/mbr-2.png"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 </div>
             </div>
             <div class="col-12 col-lg">
@@ -370,8 +369,6 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2946347" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/landing-page-software.html">Landing Page Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/countdown/countdown.js"></script>  <script src="assets/theme/js/script.js"></script>  <script src="assets/formoid/formoid.min.js"></script>  
-  
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
