Added snoozy kazoo and hid judges

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 </section>
 
 <section data-bs-version="5.1" class="team1 cid-tugL1wdT4X" id="team1-5">
-	
-	
+
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-12">
@@ -206,8 +205,28 @@
 				</div>
 			</div>
 			
+			<div class="col-sm-6 col-lg-3">
+				<div class="card-wrap">
+					<div class="image-wrap">
+						<a href="https://www.wpi.edu/academics/departments/interactive-media-game-development"
+						   target="_blank"><img src="assets/images/snoozy_kazoo_logo.jpg" alt="SnoozyKazoo"></a>
+					</div>
+					<div class="content-wrap">
+						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
+							<strong>Snoozy Kazoo</strong></h6>
+					</div>
+				</div>
+			</div>
 			
-			
+		</div>
+	</div>
+</section>
+
+
+
+<section data-bs-version="5.1" class="team1 cid-tuLU5bnwY3" id="team1-9">
+	<div class="container">
+		<div class="row justify-content-center">
 			<div class="col-sm-6 col-lg-3">
 				<div class="card-wrap">
 					<div class="image-wrap">
@@ -219,14 +238,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-</section>
-
-<section data-bs-version="5.1" class="team1 cid-tuLU5bnwY3" id="team1-9">
-	<div class="container">
-		<div class="row justify-content-center">
-			
 			<div class="col-sm-6 col-lg-3">
 				<div class="card-wrap">
 					<div class="image-wrap">
@@ -263,23 +274,10 @@
 				</div>
 			</div>
 			
-			<div class="col-sm-6 col-lg-3">
-				<div class="card-wrap">
-					<div class="image-wrap">
-						<a href="https://www.wpi.edu/academics/departments/interactive-media-game-development"
-						   target="_blank"><img src="assets/images/imgd.png" alt="WPI IMGD"></a>
-					</div>
-					<div class="content-wrap">
-						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-							<strong>WPI IMGD</strong></h6>
-					</div>
-				</div>
-			</div>
-			
 		</div>
 	</div>
 </section>
-
+<!--
 <section data-bs-version="5.1" class="team1 cid-tv8scYdItz" id="team1-c">
 	
 	
@@ -466,7 +464,7 @@
 		</div>
 	</div>
 </section>
-
+-->
 <section data-bs-version="5.1" class="image1 cid-tugRzwEODa" id="image1-7">
 	
 	
