Snoozy Kazoo Link

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 			<div class="col-sm-6 col-lg-3">
 				<div class="card-wrap">
 					<div class="image-wrap">
-						<a href="https://www.wpi.edu/academics/departments/interactive-media-game-development"
+						<a href="https://snoozykazoo.com/"
 						   target="_blank"><img src="assets/images/snoozy_kazoo_logo.jpg" alt="SnoozyKazoo"></a>
 					</div>
 					<div class="content-wrap">
