--- a/index.html
+++ b/index.html
@@ -79,8 +79,6 @@
 </section>
 
 <section data-bs-version="5.1" class="header9 cid-tugEAJ4tLs" id="header9-2">
-	
-	
 	<div class="text-center container-fluid">
 		<div class="row justify-content-center">
 			<div class="col-md-12 col-lg-9">
@@ -92,10 +90,11 @@
 					JoyArt is an intercollegiate game art competition for connecting students with industry
 					professionals! Anyone who is currently a student (or was within the past 6 months) in the Boston
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces.</p>
-				<div class="mbr-section-btn mt-3"><a class="btn btn-white-outline display-4"
+					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Check back in later to reserve tickets and vote for the People's Choice Award.</p>
+				<div class="mbr-section-btn mt-3">
+					<!--<a class="btn btn-white-outline display-4"
 				                                     href="https://docs.google.com/forms/d/e/1FAIpQLSfjbAdt3YeyEsUHx9L1Ao1aOokjxx-OwccpnRQqxHqBQM29vQ/viewform"
-				                                     target="_blank">Submit Now!</a>
+				                                     target="_blank">Submit Now!</a>-->
 					<!--<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/"
 					   target="_blank">Vote For People's Choice Now!</a>-->
@@ -111,38 +110,25 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Submissions Open Until
-					2/12/2023!</strong></h3>
-				<!--
 				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Celebrate game art with us on 2/24/2023!</strong></h3>
-				-->
 				<div class="countdown-cont align-center mb-5">
 					<div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
 					<div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
 					<div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
 					<div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
-					<div class="countdown" data-due-date="2023/02/13"></div>
-					<!--<div class="countdown" data-due-date="2023/02/24"></div>-->
+					<div class="countdown" data-due-date="2023/02/24"></div>
 				</div>
-				<!--
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					The finalist event for JoyArt 2023 will be hosted at WPI’s Seaport location in Boston, MA (303
-					Congress Street), from 5:00-8:00 on February 24th.
-					
-					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="https://t.co/mA9iRAhbW2" class="text-warning" target="_blank">JoyArt
-					2023 Details</a> </strong>document.
-				</p>
-				-->
-				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					Full details about the event, prize categories, judging criteria, and the submission process can be
-					found in our <strong><a href="https://t.co/mA9iRAhbW2" class="text-warning" target="_blank">JoyArt
-					2023 Details</a> </strong>document.
+					The finalist event for JoyArt 2023 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00 on February 24th. Check back in later to reserve tickets!
+					<br>
+					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="https://t.co/mA9iRAhbW2" class="text-warning" target="_blank">JoyArt 2023 Details</a> </strong>document.
 				</p>
 				
-				<div class="mbr-section-btn align-center mt-5"><a class="btn btn-white-outline display-4"
+				<!--<div class="mbr-section-btn align-center mt-5">
+					<a class="btn btn-white-outline display-4"
 				                                                  href="https://docs.google.com/forms/d/e/1FAIpQLSfjbAdt3YeyEsUHx9L1Ao1aOokjxx-OwccpnRQqxHqBQM29vQ/viewform">Submit
 					Now!</a>
-				</div>
+				</div>-->
 				<!--<div class="mbr-section-btn align-center mt-5"><a class="btn btn-white-outline display-4"
 				                                                  href="https://joyart.devpost.com/">Vote For People's Choice
 					Now!</a></div><div class="mbr-section-btn align-center mt-5"><a class="btn btn-white-outline display-4"
