--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<div class="container">
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
-				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Celebrate game art with us on 2/24/2023!</strong></h3>
+				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Celebrate the Joys of Game Art!</strong></h3>
 				<div class="countdown-cont align-center mb-5">
 					<div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
 					<div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
@@ -120,7 +120,7 @@
 				</div>
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
 					The finalist event for JoyArt 2023 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00 on February 24th. Check back in later to reserve tickets!
-					<br>
+					<br><br>
 					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="https://t.co/mA9iRAhbW2" class="text-warning" target="_blank">JoyArt 2023 Details</a> </strong>document.
 				</p>
 				
@@ -553,20 +553,13 @@
 		<div class="media-container-row align-center mbr-white">
 			<div class="col-12">
 				<p class="mbr-text mb-0 mbr-fonts-style display-7">
-					© Copyright 2023 JoyArt Boston. Website by <a href="https://matticoli.net" class="text-primary">Mikel</a>
+					© Copyright 2023 JoyArt Boston. Website by <a href="https://matticoli.net" class="text-primary">Mikel</a> and <a href="https://tatedonnelly.com" class="text-primary">Tate</a>
 				</p>
 			</div>
 		</div>
 	</div>
 </section>
-<section class="display-7"
-         style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;">
-	<a href="https://mobiri.se/2597032" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img
-			alt="" style="height: 4rem;"
-			src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
-	<p style="margin: 0;text-align: center;" class="display-7">Designed with &#8204;</p><a style="z-index:1"
-	                                                                                       href="https://mobirise.com/html-builder.html">HTML
-	Website Creator</a></section>
+
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/smoothscroll/smooth-scroll.js"></script>
 <script src="assets/ytplayer/index.js"></script>
@@ -575,9 +568,4 @@
 <script src="assets/theme/js/script.js"></script>
 <script src="assets/formoid/formoid.min.js"></script>
 
-
-<div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i
-		class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
-<input name="animation" type="hidden">
-</body>
 </html>
