--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+					                        href="https://joyart.eventbrite.com">Tickets</a></li>
+					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>
@@ -90,11 +92,11 @@
 					JoyArt is an intercollegiate game art competition for connecting students with industry
 					professionals! Anyone who is currently a student (or was within the past 6 months) in the Boston
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Check back in later to reserve tickets and vote for the People's Choice Award.</p>
+					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Voting for the People's Choice Award will open on Wednesday, February 22nd, 2023.</p>
 				<div class="mbr-section-btn mt-3">
-					<!--<a class="btn btn-white-outline display-4"
-				                                     href="https://docs.google.com/forms/d/e/1FAIpQLSfjbAdt3YeyEsUHx9L1Ao1aOokjxx-OwccpnRQqxHqBQM29vQ/viewform"
-				                                     target="_blank">Submit Now!</a>-->
+					<a class="btn btn-white-outline display-4"
+				                                     href="https://joyart.eventbrite.com"
+				                                     target="_blank">Reserve A Ticket</a>
 					<!--<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/"
 					   target="_blank">Vote For People's Choice Now!</a>-->
@@ -125,14 +127,12 @@
 				</p>
 				
 				<!--<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4"
-				                                                  href="https://docs.google.com/forms/d/e/1FAIpQLSfjbAdt3YeyEsUHx9L1Ao1aOokjxx-OwccpnRQqxHqBQM29vQ/viewform">Submit
+					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/">Vote For People's Choice
 					Now!</a>
 				</div>-->
-				<!--<div class="mbr-section-btn align-center mt-5"><a class="btn btn-white-outline display-4"
-				                                                  href="https://joyart.devpost.com/">Vote For People's Choice
-					Now!</a></div><div class="mbr-section-btn align-center mt-5"><a class="btn btn-white-outline display-4"
-				                                                                        href="https://joyart.eventbrite.com">Reserve A Ticket</a>-->
+				<div class="mbr-section-btn align-center mt-5">
+					<a class="btn btn-white-outline display-4" href="https://joyart.eventbrite.com">Reserve A Ticket</a>
+				</div>
 			</div>
 		</div>
 	</div>
