--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="row justify-content-center">
 			<div class="col-md-12 col-lg-9">
 				<div class="image-wrap mb-4">
-					<img src="assets/images/joyart-banner.jpg" alt="JoyArt Banner">
+					<img src="assets/images/JoyArtBanner.png" alt="JoyArt Banner">
 				</div>
 				<h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>JoyArt Boston 2023</strong></h1>
 				<p class="mbr-text mbr-fonts-style display-4">
@@ -364,7 +364,7 @@
 			<div class="col-sm-6 col-lg-4">
 				<div class="card-wrap">
 					<div class="image-wrap">
-						<img src="assets/images/judge-chloe-2.jpeg" alt="Mobirise Website Builder">
+						<img src="assets/images/judge_chloe.jpg" alt="Mobirise Website Builder">
 					</div>
 					<div class="content-wrap">
 						<h5 class="mbr-section-title card-title mbr-fonts-style align-center m-0 display-5">
@@ -400,7 +400,7 @@
 		</div>
 	</div>
 </section>
-
+-->
 <section data-bs-version="5.1" class="team1 cid-tv8t5KBdp0" id="team1-e">
 	
 	
@@ -467,7 +467,7 @@
 		</div>
 	</div>
 </section>
--->
+
 <section data-bs-version="5.1" class="image1 cid-tugRzwEODa" id="image1-7">
 	
 	
