--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
 					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Voting for the People's Choice Award will open on Wednesday, February 22nd, 2023.</p>
 				<div class="mbr-section-btn mt-3">
-					<a class="btn btn-white-outline display-4"
-				                                     href="https://joyart.eventbrite.com"
-				                                     target="_blank">Reserve A Ticket</a>
 					<!--<a class="btn btn-white-outline display-4"
-					   href="https://joyart.devpost.com/"
-					   target="_blank">Vote For People's Choice Now!</a>-->
+				                                     href="https://joyart.eventbrite.com"
+				                                     target="_blank">Reserve A Ticket</a>-->
+					<a class="btn btn-white-outline display-4"
+					   href="https://joyart.devpost.com/project-gallery"
+					   target="_blank">Finalist Gallery</a>
 					<a class="btn btn-white-outline display-4" href="index.html#image1-7">Learn More</a></div>
 			</div>
 		</div>
@@ -126,12 +126,9 @@
 					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="https://t.co/mA9iRAhbW2" class="text-warning" target="_blank">JoyArt 2023 Details</a> </strong>document.
 				</p>
 				
-				<!--<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/">Vote For People's Choice
-					Now!</a>
-				</div>-->
 				<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" href="https://joyart.eventbrite.com">Reserve A Ticket</a>
+					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
+					Award</a>
 				</div>
 			</div>
 		</div>
