--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-					                        href="https://joyart.eventbrite.com">Tickets</a></li>
+					                        href="https://joyart.eventbrite.com">Eventbrite</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
@@ -94,9 +94,9 @@
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
 					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Voting for the People's Choice Award will open on Wednesday, February 22nd, 2023.</p>
 				<div class="mbr-section-btn mt-3">
-					<!--<a class="btn btn-white-outline display-4"
+					<a class="btn btn-white-outline display-4"
 				                                     href="https://joyart.eventbrite.com"
-				                                     target="_blank">Reserve A Ticket</a>-->
+				                                     target="_blank">Eventbrite</a>
 					<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/project-gallery"
 					   target="_blank">Finalist Gallery</a>
