--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	
 	
 	<title>JoyArt Boston 2023</title>
-	<link rel="stylesheet" href="mobirise/style.css">
+	<link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 	<link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -303,7 +303,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="https://www.zachschlappi.com/" target="_blank">
-									<span class="mbr-iconfont mobi-mbri-search"></span>
+									<span class="mbr-iconfont mbri-website-theme"></span>
 								</a>
 							</div>
 							<div class="soc-item">
@@ -337,7 +337,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="https://kindlj2017.myportfolio.com/projects" target="_blank">
-									<span class="mbr-iconfont mobi-mbri-search"></span>
+									<span class="mbr-iconfont mbri-website-theme"></span>
 								</a>
 							</div>
 							<div class="soc-item">
@@ -374,7 +374,7 @@
 							<div class="soc-item">
 								<a href="https://luigiland.carbonmade.com/" target="_blank">
 									<!--<img class="mbr-iconfont" src="assets/mobirise/mbri-browse.svg">-->
-									<span class="mbr-iconfont mobi-mbri-search"></span>
+									<span class="mbr-iconfont mbri-website-theme"></span>
 								</a>
 							</div>
 							<div class="soc-item">
