--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="https://www.zachschlappi.com/" target="_blank">
-									<span class="mbr-iconfont mbri-website-theme"></span>
+									<span class="mbr-iconfont socicon-internet socicon"></span>
 								</a>
 							</div>
 							<div class="soc-item">
@@ -337,7 +337,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="https://kindlj2017.myportfolio.com/projects" target="_blank">
-									<span class="mbr-iconfont mbri-website-theme"></span>
+									<span class="mbr-iconfont socicon-internet socicon"></span>
 								</a>
 							</div>
 							<div class="soc-item">
@@ -373,8 +373,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="https://luigiland.carbonmade.com/" target="_blank">
-									<!--<img class="mbr-iconfont" src="assets/mobirise/mbri-browse.svg">-->
-									<span class="mbr-iconfont mbri-website-theme"></span>
+									<span class="mbr-iconfont socicon-internet socicon"></span>
 								</a>
 							</div>
 							<div class="soc-item">
