--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
-					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-					                        href="https://joyart.eventbrite.com">Eventbrite</a></li>
+					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+					                        href="https://joyart.eventbrite.com">Eventbrite</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
@@ -95,9 +95,9 @@
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
 					existing portfolio pieces. The overall winner will receive $250 and each category winner will receive $75.<br><br>Voting for the People's Choice Award will open on Wednesday, February 22nd, 2023.</p>
 				<div class="mbr-section-btn mt-3">
-					<a class="btn btn-white-outline display-4"
+					<!--<a class="btn btn-white-outline display-4"
 				                                     href="https://joyart.eventbrite.com"
-				                                     target="_blank">Eventbrite</a>
+				                                     target="_blank">Eventbrite</a>-->
 					<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/project-gallery"
 					   target="_blank">Finalist Gallery</a>
@@ -106,7 +106,7 @@
 		</div>
 	</div>
 </section>
-
+<!--
 <section data-bs-version="5.1" class="countdown3 cid-tuM0QgRyIm" id="countdown3-a">
 	
 	
@@ -134,7 +134,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section>-->
 
 <section data-bs-version="5.1" class="image4 cid-tuM2XnFszh mbr-fullscreen" id="image4-b">
 	
