--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 						<div class="social-row display-7">
 							<div class="soc-item">
 								<a href="http://www.chloetibets.com/" target="_blank">
-									<span class="mbr-iconfont mobi-mbri-desktop mobi-mbri"></span>
+									<span class="mbr-iconfont socicon-internet socicon"></span>
 								</a>
 							</div>
 							<div class="soc-item">
