--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	      content="A website for information about JoyArt Boston 2023, the premiere intercollegiate game art showcase and competition!">
 	
 	
-	<title>JoyArt Boston 2023</title>
+	<title>JoyArt Boston</title>
 	<link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
 	<link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
 	<link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
