Removes year from nav bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			<div class="navbar-brand">
 				
 				<span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-5"
-				                                     href="index.html#top">JoyArt Boston 2023</a></span>
+				                                     href="index.html#top">JoyArt Boston</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
 			        data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
