replaced link and added submission button

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					JoyArt is an intercollegiate game art competition for connecting students with industry
 					professionals! Anyone who is currently a student (or was within the past 6 months) in the Boston
 					area is encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces. There will be a prize for each category winner.<br><br>Check out the winning submissions now!</p>
+					existing portfolio pieces. There will be a prize for each category winner.</p>
 				<div class="mbr-section-btn mt-3">
 					<!--<a class="btn btn-white-outline display-4"
 				                                     href="https://joyart.eventbrite.com"
@@ -136,14 +136,18 @@
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
 					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00 on February 9th. Check back in later to reserve tickets!
 					<br><br>
-					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="http://tinyurl.com/27vybmch" class="text-warning" target="_blank">JoyArt 2024 Details</a> </strong>document.
+					Full details about the event, prize categories, and judging criteria can be found in our <strong><a href="http://tinyurl.com/joyart2024details" class="text-warning" target="_blank">JoyArt 2024 Details</a> </strong>document.
 				</p>
-				<!--
+
+
 				<div class="mbr-section-btn align-center mt-5">
+					<a class="btn btn-white-outline display-4" ref="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
+				</div>
+				<!--<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
 					Award</a>
-				</div>
-				-->
+				</div>-->
+
 			</div>
 		</div>
 	</div>
