--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
 					                        href="https://joyart.eventbrite.com">Eventbrite</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
+					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+											href="2023.html">Previous Year</a></li>
 					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
