--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-											href="2023.html">Previous Year</a></li>
+											href="2023.html">Joyart 2023</a></li>
 					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
