fixed submit button

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 				<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" ref="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
+					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
 				</div>
 				<!--<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
