brought over same changes from main

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-											href="2023.html">Previous Year</a></li>
+											href="2023.html">JoyArt 2023</a></li>
 					<!--<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>-->
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
@@ -143,7 +143,7 @@
 
 
 				<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" ref="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
+					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
 				</div>
 				<!--<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
