--- a/2023.html
+++ b/2023.html
@@ -64,6 +64,8 @@
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
+											href="2023.html">JoyArt 2024</a></li>
+					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#form4-6">Contact</a></li>
