--- a/2023.html
+++ b/2023.html
@@ -45,7 +45,7 @@
 			<div class="navbar-brand">
 				
 				<span class="navbar-caption-wrap"><a class="navbar-caption text-white text-primary display-5"
-				                                     href="index.html#top">JoyArt Boston</a></span>
+				                                     href="index.html#top">JoyArt Boston 2023</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse"
 			        data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent"
@@ -64,7 +64,7 @@
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#image1-7">Info</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
-											href="2023.html">JoyArt 2024</a></li>
+											href="index.html">JoyArt 2024</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
 					                        href="index.html#team1-5">Sponsors</a></li>
 					<li class="nav-item"><a class="nav-link link text-white text-primary display-4"
