alternate formatting of info section: submit button at top and countdown in between text

--- a/index.html
+++ b/index.html
@@ -128,6 +128,14 @@
 		<div class="row justify-content-center">
 			<div class="col-lg-8">
 				<h3 class="mbr-section-title mb-5 align-center mbr-fonts-style display-2"><strong>Share your Joy of Game Art!</strong></h3>
+
+				<div class="mbr-section-btn align-center mt-5">
+					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
+				</div>
+				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
+					Submissions close January 26th. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
+					<br>
+				</p>
 				<div class="countdown-cont align-center mb-5">
 					<div class="daysCountdown col-xs-3 col-sm-3 col-md-3" title="Days"></div>
 					<div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
@@ -135,9 +143,10 @@
 					<div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
 					<div class="countdown" data-due-date="2024/01/26"></div>
 				</div>
+
+
+
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					Submissions close January 26th. Finalists will be announced within a few days and will be invited to attend the in-person event on February 9th.
-					<br><br>
 					The finalist event for JoyArt 2024 will be hosted at WPI’s Seaport location in Boston, MA (303 Congress Street), from 5:00-8:00pm on February 9th. Check back in later to reserve tickets!
 					<br>Finalists must be in attendance to be considered for final judging.
 					<br><br>
@@ -145,9 +154,7 @@
 				</p>
 
 
-				<div class="mbr-section-btn align-center mt-5">
-					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
-				</div>
+
 				<!--<div class="mbr-section-btn align-center mt-5">
 					<a class="btn btn-white-outline display-4" ref="https://joyart.devpost.com/project-gallery">Vote For People's Choice
 					Award</a>
