corrected countdown time to include time and not just date

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					<div class="hoursCountdown col-xs-3 col-sm-3 col-md-3" title="Hours"></div>
 					<div class="minutesCountdown col-xs-3 col-sm-3 col-md-3" title="Minutes"></div>
 					<div class="secondsCountdown col-xs-3 col-sm-3 col-md-3" title="Seconds"></div>
-					<div class="countdown" data-due-date="2024/01/26"></div>
+					<div class="countdown" data-due-date="2024/01/26 12:00:00"></div>
 				</div>
 
 
