changed text for Learn More button at top to Want the Latest Info? since that seems more fitting for the Twitter link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					<!--<a class="btn btn-white-outline display-4"
 					   href="https://joyart.devpost.com/project-gallery"
 					   target="_blank">Finalist Gallery</a> -->
-					<a class="btn btn-white-outline display-4" href="index.html#image1-7">Learn More</a></div>
+					<a class="btn btn-white-outline display-4" href="index.html#image1-7">Want the Latest Info?</a></div>
 			</div>
 		</div>
 	</div>
