specified due date

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					<a class="btn btn-white-outline display-4" href="https://forms.gle/GiacC3QDGow5asnE6">Submit Now!</a>
 				</div>
 				<p class="mbr-text mb-5 align-center mbr-fonts-style display-7">
-					Submissions close January 26th. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
+					Submissions close January 26th at 12:00pm EST. Finalists will be announced a few days after the deadline and will be invited to attend the in-person event on February 9th.
 					<br>
 				</p>
 				<div class="countdown-cont align-center mb-5">
