--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					JoyArt is an intercollegiate game art competition for connecting students with industry
 					professionals! <!--Anyone who is currently a student (or was within the past 6 months) in the Boston
 					area was encouraged to submit - you don't need to make something new, and are welcome to submit
-					existing portfolio pieces.--> There will be a prize for each category winner. Come join us in Boston on February 9th at 5pm EST!</p>
+					existing portfolio pieces.--> There will be a prize for each category winner. Come join us for our in person event in Boston on February 9th at 5pm EST!</p>
 				<div class="mbr-section-btn mt-3">
 					<a class="btn btn-white-outline display-4"
 				                                     href="https://www.eventbrite.com/e/joyart-boston-2024-tickets-808506864797"
