renamed Guilds to Betty Sports

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 					</div>
 					<div class="content-wrap">
 						<h6 class="mbr-role mbr-fonts-style align-center mb-3 display-4">
-							<strong>Guilds</strong></h6>
+							<strong>Betty Sports</strong></h6>
 					</div>
 				</div>
 			</div>
